<resources>
    <string name="choose_photo">Choose Photo</string>
    <string name="take_photo">Take Photo</string>
    <string name="viewpager_indicator">%1$d/%2$d</string>
    <string name="frag3_title">Survey</string>
    <string name="company_detail">Company Detail</string>
    <string name="frag_home">Home</string>
    <string name="frag_survey">Survey</string>
    <string name="frag_price">Information</string>
    <string name="frag_goods">Mall</string>
    <string name="frag_me">Mine</string>
    <string name="app_name">StakeHolders</string>
    <string name="survey_comment">Survey Comment</string>
    <string name="recent_survey">Recent Survey</string>
    <string name="more"><u>More</u></string>
    <string name="recent_listview_person">Follow Member:</string>
    <string name="survey_focus">Survey Focus</string>
    <string name="activity_search_survey_title">Create Activity</string>
    <string name="activity_search_survey_confirm">Confirm</string>
    <string name="activity_search_survey_search_hint">input the city name</string>
    <string name="activity_search_survey_search_locate_to_me">Locate to My Position</string>
    <string name="activity_search_survey_search_popular_city">Popular Cities</string>
    <string name="activity_search_survey_search_all_city">All Cities</string>
    <string name="title_activity_select">SelectActivity</string>
    <string name="title_activity_create_activity">ActivityCreateActivity</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="enroll_under_audlt">Your enrollment has submitted to sponsor, please wait for response.</string>
    <string name="enroll_already">You had enrolled. Us welcome your coming!</string>
    <string name="enroll_full">The Activity is at full strength. You can get more information through easy touch or real-time comment.</string>
    <string name="enroll_success">Success</string>
    <string name="enroll_adult">Adult</string>
    <string name="enroll_fail">Full</string>
    <string name="enrolled">Enroll over</string>
    <string name="search_SelectActivity">Search</string>
    <string name="search_content_hint_selectactivity">Enter name,sponor or company</string>
    <string name="choose_according_city">Select City</string>
    <string name="choose_according_time">Select Time</string>
    <string name="choose_according_industry">Select Industry</string>
    <string name="change_city">All Cities</string>
    <string name="all_city">All</string>
    <string name="follow_members">Follow Members: </string>
    <string name="title_activity_record_sound">RecordSoundActivity</string>
    <string name="survey_enterprise">Survey Enterprise</string>
    <string name="outline">Outline</string>
    <string name="sign_up">Sign Up</string>
    <string name="signed_up">Signed Up</string>
    <string name="collect">Collect It</string>
    <string name="initiate">Initiate</string>
    <string name="schedule">Schedule:</string>
    <string name="follow">Browse:</string>
    <string name="collection">Collect:</string>
    <string name="register">Register:</string>
    <string name="register_list"><u>RegisterList</u></string>
    <string name="place">Place:</string>
    <string name="detail">Detail</string>
    <string name="comment">Comment</string>
    <string name="initiator">Initiator</string>
    <string name="related_enterprises">Related Enterprises</string>
    <string name="survey_outline">Survey Outline</string>
    <string name="registratable">Registerable</string>
    <string name="registration_ends">Registration Ends</string>
    <string name="underway">Underway</string>
    <string name="activity_end">Activity Ended</string>
    <string name="notes">Notes</string>
    <string name="registration_fee">Registration Fee</string>
    <string name="meeting_place">Meeting Place</string>
    <string name="receiver">Receiver</string>
    <string name="link_man">Link Man：</string>
    <string name="phone">Phone:</string>
    <string name="service">Service</string>
    <string name="registrated_number">Registrated Number</string>
    <string name="title_activity_registration">RegistrationActivity</string>
    <string name="activity_registration_title">Registration</string>
    <string name="name">Name</string>
    <string name="record_sound">Record</string>
    <string name="manage_my_record_sound">Manage My Record</string>
    <string name="edit_record_sound">Edit</string>
    <string name="delete_record_sound">Delete</string>
    <string name="easy_touch">Easy Touch</string>
    <string name="easy_touch_time">Time:  </string>
    <string name="easy_touch_place">Place:  </string>
    <string name="easy_touch_field">Field:  </string>
    <string name="easy_touch_record">Record </string>
    <string name="title_activity_invite_friends">InviteFriendsActivity</string>
    <string name="title_activity_registration_list">RegistrationListActivity</string>
    <string name="activity_registration_list_title">Registration List</string>
    <string name="title_activity_comment_list">CommentListActivity</string>
    <string name="invite_friends_title">Invite Friends</string>
    <string name="invite_friends_search_friends">Search Friends</string>
    <string name="invite_friends_send_friends">Send Invites</string>
    <string name="title_activity_message">MessageActivity</string>
    <string name="message_title">Message</string>
    <string name="announcement_title">Inform</string>
    <string name="survey">Survey</string>
    <string name="survey_list">Personal OutLine List</string>
    <string name="title_activity_survey_list">SurveyListActivity</string>
    <string name="survey_list2">My OutLine</string>
    <string name="survey_list2_btn_text">Found</string>
    <string name="survey_list_sort">Sort</string>
    <string name="survey_list_state">State</string>
    <string name="survey_list_filter">Filter</string>
    <string name="survey_list_follow_member">Follow member: </string>
    <string name="survey_list_cancel_sign_up">Cancel Registration?</string>
    <string name="survey_list_confirm_sign_up">Confirm Registration?</string>
    <string name="cities_limit">The Number of selected cities should not over 5!</string>
    <string name="industry_limit">The Number of selected industries should not over 5!</string>
    <string name="survey_list_cancel">Back</string>
    <string name="survey_list_confirm">Yes</string>
    <string name="time_in_ascending_order">Time in Descending Order</string>
    <string name="time_in_descending_order">Time in Ascending OrderTime in Descending Order</string>
    <string name="name_in_ascending_order">Name in Ascending Order</string>
    <string name="name_in_descending_order">Name in Descending Order</string>
    <string name="heat_in_ascending_order">Heat in Ascending Order</string>
    <string name="heat_in_descending_order">Heat in Descending Order</string>
    <string name="all">All</string>
    <string name="two_tundred_limit">(Within 200 words.)</string>
    <string name="signing_up">Signing Up </string>
    <string name="under_way">Under Way </string>
    <string name="past_survey">Past </string>
    <string name="relocate">Relocate</string>
    <string name="confirm">Confirm</string>
    <string name="userjoin_title">UserJoin</string>
    <string name="userjoin_member">Number：</string>
    <string name="userjoin_research">Find</string>
    <string name="userjoin_research_mem">Enrollment：</string>
    <string name="userjoin_none_inform">Being no other notifications</string>
    <string name="userjoin_none_user">Being no other registration</string>
    <string name="inform_edit_title">Written Notification</string>
    <string name="inform_edit_publish"><u>Publish</u></string>
    <string name="inform_edit_dialog1">Once saved released</string>
    <string name="inform_edit_dialog2">he system will automatically give each of the applicants to send notifications</string>
    <string name="inform_dialog">Your notification has been sent to the members of Event Registration</string>
    <string name="search_activity_search">Search</string>
    <string name="search_activity_search_content">Search your content</string>
    <string name="search_activity_history">Search History</string>
    <string name="sign_up_text">Registration List</string>
    <string name="search_product">Please enter the product name to search goods within the company</string>
    <string name="all_comment">All</string>
    <string name="popular_comment">Popular</string>
    <string name="friend_comment">Friend</string>
    <string name="initiator_comment">Initiator</string>
    <string name="title_activity_single_comment">SingleCommentActivity</string>
    <string name="my_comment">mine</string>
    <string name="video_link">Video Link</string>
    <string name="transmit">Transmit</string>
    <string name="copy">Copy</string>
    <string name="report">Report</string>
    <string name="cancel">Cancel</string>
    <string name="create_title">Creating Activities</string>
    <string name="create_edit">Edit Activities</string>
    <string name="set_name_tip">Set a beautiful name for your Activity(Less than 8 words)</string>
    <string name="promote_photo">Picture for your activity</string>
    <string name="activity_introduction">Introduction For Your Activity</string>
    <string name="activity_introduction_tip">A brief introduction will attract more partners</string>
    <string name="next">Next</string>
    <string name="album">Album</string>
    <string name="film">Film</string>
    <string name="survey_activity">Survey Activity</string>
    <string name="frag2_activity_name_text">Events Research Enterprise</string>
    <string name="frag2_activity_add_text"><u>Add a research company</u></string>
    <string name="contact">Contact</string>
    <string name="Telephone">Telephone</string>
    <string name="other_statement">Statement</string>
    <string name="completed">Completed</string>
    <string name="create_activity_tip">Your activity had been published and is under adult. The draug is saved in personal</string>
    <string name="item_enterprise_outline">Outline</string>
    <string name="brief_title">Company profile</string>
    <string name="brief_commit"><u>Determine</u></string>
    <string name="have_to_fill_tip">Please fill the blank with *</string>
    <string name="activity_single_comment_title">Single Comment</string>
    <string name="title_activity_publish_comment">PublishCommentActivity</string>
    <string name="write_comment">Comment</string>
    <string name="write_topic">Write Topic</string>
    <string name="publish_comment">Publish</string>
    <string name="photo">Photo</string>
    <string name="foud_accrual">Accrual</string>
    <string name="foud_annual_rate">Annual Rate</string>
    <string name="foud_release_date">Release Date</string>
    <string name="foud_newest_nav">Newest Nav</string>
    <string name="foud_day_rise">Day Rise</string>
    <string name="foud_week_rise">Week Rise</string>
    <string name="foud_month_rise">Month Rise</string>
    <string name="foud_year_rise">Year Rise</string>
    <string name="foud_accrual_time">Accrual Time</string>
    <string name="funddetails">Fund details</string>
    <string name="dividend_distribution">Detail of Dividend Distribution</string>
    <string name="dividend_split">Detail of Dividend Split</string>
    <string name="dividend_year">Year</string>
    <string name="equality_register_day">Equality Register Day</string>
    <string name="ex_dividend_day">EX_Dividend Day</string>
    <string name="per_dividend">Per Dividend</string>
    <string name="dividend_grant_day">Dividend Grant Day</string>
    <string name="split_category">Split Category</string>
    <string name="split_convert_rate">Split Convert Rate</string>
    <string name="temporarily_no_data">Temporarily No Data</string>
</resources>